# bevy_xpbd

./: Cargo.toml  LICENSE  README.md  build.rs  mise.toml  rust-toolchain.toml
assets/shaders/: cloth_sim.wgsl  cloth_sim_jacobi.wgsl  cloth_vertex.wgsl
crates/softbody_solver/: Cargo.toml  README.md
crates/softbody_solver/src/: atom.rs  common.rs  gs.rs  jacobi.rs  lib.rs  tests.rs  types.rs
docs/: CLOTH_SIM_STABILITY.md  XCTRACE_EXPORT.md
examples/: cloth.rs  cloth_xpbd.rs
examples/cloth/: cloth_ui.rs
src/: cloth_compute.rs  cloth_jacobi.rs  cloth_material.rs  gpu_cpu_parity.rs  gpu_cpu_parity_jacobi.rs  lib.rs  mesh_prep.rs  xpbd_cpu.rs
src/shaders/: cloth_vertex.wgsl
