[package]
name = "bevy_softbody"
version = "0.1.0"
edition = "2021"
description = "GPU XPBD cloth with Bevy 0.19 (wgpu/WebGPU)"
license = "MIT"
authors = ["Máté Homolya <mate.homolya@gmail.com>"]
repository = "https://github.com/mate-h/bevy_softbody"
homepage = "https://github.com/mate-h/bevy_softbody"
readme = "README.md"
keywords = ["bevy", "cloth", "softbody", "xpbd", "gpu"]
categories = ["game-development", "graphics"]
include = [
    "src/**/*",
    "LICENSE",
    "README.md",
    "Cargo.toml",
]

[lib]
path = "src/lib.rs"

[[example]]
name = "cloth"
path = "examples/cloth.rs"

[features]
default = ["solver-jacobi"]
solver-gauss-seidel = []
solver-jacobi = []

[dependencies]
bevy = "0.19.0"
bytemuck = { version = "1.22", features = ["derive"] }

[dev-dependencies]
bevy_egui = "0.41"
pollster = "0.4"
wgpu = "29.0.3"

[profile.dev]
opt-level = 1
