[workspace]
members = ["."]
exclude = ["crates/softbody_solver"]
resolver = "2"

[package]
name = "bevy_softbody"
version = "0.1.0"
edition = "2021"
description = "GPU XPBD cloth with Bevy 0.19 (wgpu/WebGPU)"
license = "MIT"
authors = ["Máté Homolya <mate.homolya@gmail.com>"]
repository = "https://github.com/mate-h/bevy_softbody"
homepage = "https://github.com/mate-h/bevy_softbody"
readme = "README.md"
keywords = ["bevy", "cloth", "softbody", "xpbd", "gpu"]
categories = ["game-development", "graphics"]
include = [
    "src/**/*",
    "crates/softbody_solver/**/*",
    "build.rs",
    "LICENSE",
    "README.md",
    "Cargo.toml",
]

[lib]
path = "src/lib.rs"

[[example]]
name = "cloth"
path = "examples/cloth.rs"

[features]
default = ["solver-jacobi"]
solver-gauss-seidel = []
solver-jacobi = []

[dependencies]
bevy = { version = "0.19.0", features = ["shader_format_spirv"] }
bytemuck = { version = "1.22", features = ["derive"] }

[build-dependencies]
spirv-builder = "0.10.0-alpha.1"

[dev-dependencies]
bevy_egui = "0.41"

[profile.dev]
opt-level = 1

# Keep rustc_codegen_spirv (spirv-builder build-dep) fast enough to be usable.
[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3
codegen-units = 16
